--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPztGLLpBWF2Msi17wDnwIz",
+      "authorship_tag": "ABX9TyN8rCEUf774I1TVjyIKAjHX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,39 +28,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 25,
       "metadata": {
         "id": "3uZk_1xRAf_B",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b4fecf2-ec4e-478b-a22b-3c1a6e43c86c"
+        "outputId": "07bcd26d-747b-45ee-e08f-c8e337646041"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0.72267521  0.89488957]\n",
-            " [ 0.76135405  0.91977235]\n",
-            " [ 0.653418    0.82752969]\n",
-            " [ 0.70504918  0.89451953]\n",
-            " [ 0.59654398  0.77749662]\n",
-            " [-0.17216104  0.12702011]\n",
-            " [-0.10215442  0.20347779]\n",
-            " [-0.09950249  0.20354599]\n",
-            " [ 0.02882341  0.33905717]\n",
-            " [-0.16451544  0.1361038 ]\n",
-            " [-0.00492883  0.13365894]\n",
-            " [-0.01618956  0.1282983 ]\n",
-            " [ 0.02807238  0.16336494]\n",
-            " [-0.025229    0.11966667]\n",
-            " [-0.05322884  0.09561471]\n",
-            " [-0.46195903 -0.18276034]\n",
-            " [-0.47343404 -0.19123761]\n",
-            " [-0.50331188 -0.21081394]\n",
-            " [-0.48760532 -0.20183013]\n",
-            " [-0.49065933 -0.20380093]]\n"
+            "[[ 1.43206675e+00  3.75930108e-01]\n",
+            " [ 1.42711773e+00  3.60902987e-01]\n",
+            " [ 1.48956897e+00  3.27064952e-01]\n",
+            " [ 1.47856719e+00  3.35946605e-01]\n",
+            " [ 1.48102629e+00  3.21929299e-01]\n",
+            " [ 2.03532684e+00  3.34990300e-02]\n",
+            " [ 1.99645261e+00  3.16367971e-02]\n",
+            " [ 2.01241440e+00 -7.06680404e-04]\n",
+            " [ 1.99358975e+00  3.74955182e-02]\n",
+            " [ 2.03129657e+00  9.36993840e-03]\n",
+            " [ 1.71196858e+00  5.31664913e-01]\n",
+            " [ 1.71581672e+00  5.40045987e-01]\n",
+            " [ 1.69970602e+00  5.70450979e-01]\n",
+            " [ 1.67963233e+00  5.93080158e-01]\n",
+            " [ 1.74479085e+00  5.36823869e-01]\n",
+            " [ 2.19456821e+00  1.72658355e-01]\n",
+            " [ 2.18336556e+00  1.87610537e-01]\n",
+            " [ 2.17300125e+00  1.92494648e-01]\n",
+            " [ 2.22069197e+00  1.59634013e-01]\n",
+            " [ 2.16852607e+00  1.97286614e-01]]\n"
           ]
         }
       ],
@@ -72,7 +72,7 @@
         "\n",
         "#マルチレイヤーネットワーク\n",
         "\n",
-        "def DateSets(y=[0,1,1,1],N=50,loc=0,scale=0.05):\n",
+        "def MakeData(y=[0,1,1,1],N=50,loc=0,scale=0.05):\n",
         "\n",
         "  #N=10         データのサイズ\n",
         "  #loc          平均\n",
@@ -207,7 +207,7 @@
         "    self.l2.update()\n",
         "\n",
         "\n",
-        "X,y=DateSets(y=[0,1,1,1],N=5) #学習用のデータの準備\n",
+        "X,y=MakeData(y=[0,1,1,1],N=5) #学習用のデータの準備\n",
         "input_dim=X.shape[1]\n",
         "output_dim=np.max(y)+1\n",
         "model=Twin(input_dim,5,output_dim)\n",
