--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8rCEUf774I1TVjyIKAjHX",
+      "authorship_tag": "ABX9TyOD1pTtw/xEPOmqtLh2Jb9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,39 +28,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 14,
       "metadata": {
         "id": "3uZk_1xRAf_B",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07bcd26d-747b-45ee-e08f-c8e337646041"
+        "outputId": "3eaf3c33-6195-45d4-9ce1-0717febc05e6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 1.43206675e+00  3.75930108e-01]\n",
-            " [ 1.42711773e+00  3.60902987e-01]\n",
-            " [ 1.48956897e+00  3.27064952e-01]\n",
-            " [ 1.47856719e+00  3.35946605e-01]\n",
-            " [ 1.48102629e+00  3.21929299e-01]\n",
-            " [ 2.03532684e+00  3.34990300e-02]\n",
-            " [ 1.99645261e+00  3.16367971e-02]\n",
-            " [ 2.01241440e+00 -7.06680404e-04]\n",
-            " [ 1.99358975e+00  3.74955182e-02]\n",
-            " [ 2.03129657e+00  9.36993840e-03]\n",
-            " [ 1.71196858e+00  5.31664913e-01]\n",
-            " [ 1.71581672e+00  5.40045987e-01]\n",
-            " [ 1.69970602e+00  5.70450979e-01]\n",
-            " [ 1.67963233e+00  5.93080158e-01]\n",
-            " [ 1.74479085e+00  5.36823869e-01]\n",
-            " [ 2.19456821e+00  1.72658355e-01]\n",
-            " [ 2.18336556e+00  1.87610537e-01]\n",
-            " [ 2.17300125e+00  1.92494648e-01]\n",
-            " [ 2.22069197e+00  1.59634013e-01]\n",
-            " [ 2.16852607e+00  1.97286614e-01]]\n"
+            "[[1. 0.]\n",
+            " [1. 0.]\n",
+            " [1. 0.]\n",
+            " [1. 0.]\n",
+            " [1. 0.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]]\n"
           ]
         }
       ],
@@ -124,10 +124,16 @@
         "  plt.show()\n",
         "\n",
         "def onehot(X):\n",
-        "  return np.identity(len(X))[y]\n",
+        "  n=np.max(X)+1\n",
+        "  return np.identity(n)[y]\n",
         "\n",
         "def sigmoid(x):\n",
         "  return 1/(1+np.exp(-x)+1e-7)\n",
+        "\n",
+        "def softmax(x):\n",
+        "  c=np.max(x,axis=1,keepdims=True)\n",
+        "  z=np.exp(x-c)\n",
+        "  return z/np.sum(z,axis=1,keepdims=True)\n",
         "\n",
         "class Sigmoid:\n",
         "  def __init__(self):\n",
@@ -206,13 +212,18 @@
         "    self.l1.update()\n",
         "    self.l2.update()\n",
         "\n",
+        "  def fit(self,X,t):\n",
+        "    t=onehot(t)\n",
+        "    print(t)\n",
+        "    y=self.forward(X)\n",
+        "\n",
+        "\n",
         "\n",
         "X,y=MakeData(y=[0,1,1,1],N=5) #学習用のデータの準備\n",
         "input_dim=X.shape[1]\n",
         "output_dim=np.max(y)+1\n",
         "model=Twin(input_dim,5,output_dim)\n",
-        "y=model.forward(X)\n",
-        "print(y)\n"
+        "y=model.fit(X,y)\n"
       ]
     },
     {
