Colaboratory を使用して作成しました

--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOD1pTtw/xEPOmqtLh2Jb9o",
+      "authorship_tag": "ABX9TyNMC3ziQug0rPmOPqXJJlVd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,42 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 30,
       "metadata": {
-        "id": "3uZk_1xRAf_B",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3eaf3c33-6195-45d4-9ce1-0717febc05e6"
+        "id": "3uZk_1xRAf_B"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[1. 0.]\n",
-            " [1. 0.]\n",
-            " [1. 0.]\n",
-            " [1. 0.]\n",
-            " [1. 0.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]\n",
-            " [0. 1.]]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -116,7 +85,7 @@
         "  xx1,xx2=np.meshgrid(x1,x2)    #メッシュ\n",
         "  z=np.array([xx1.ravel(),xx2.ravel()]).T   #座標点の作成\n",
         "\n",
-        "  Z=model(z).reshape(xx1.shape)   #各座標点を分類する\n",
+        "  Z=model.predict(z).reshape(xx1.shape)   #各座標点を分類する\n",
         "\n",
         "  plot(x,y,c=colors) #データをプロットする。\n",
         "\n",
@@ -212,10 +181,24 @@
         "    self.l1.update()\n",
         "    self.l2.update()\n",
         "\n",
-        "  def fit(self,X,t):\n",
+        "  def step(self,X,t): #学習の１ステップ\n",
+        "    batch_size=X.shape[0]\n",
+        "    y=self.forward(X)  #順伝播\n",
+        "    y=softmax(y)\n",
+        "    delta=(y-t)/batch_size  #誤差\n",
+        "    delfa=self.backward(delta)  #逆伝播\n",
+        "    self.update()  #パラメータの更新\n",
+        "    return delta\n",
+        "\n",
+        "  def fit(self,X,t,epoch=100):  #学習\n",
         "    t=onehot(t)\n",
-        "    print(t)\n",
+        "    self.step(X,t)\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def predict(self,X):  #予測\n",
         "    y=self.forward(X)\n",
+        "    return np.argmax(X,axis=1)\n",
         "\n",
         "\n",
         "\n",
@@ -223,7 +206,9 @@
         "input_dim=X.shape[1]\n",
         "output_dim=np.max(y)+1\n",
         "model=Twin(input_dim,5,output_dim)\n",
-        "y=model.fit(X,y)\n"
+        "model.fit(X,y)\n",
+        "#y=decision_regions(X,y,model)\n",
+        "\n"
       ]
     },
     {
